<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="HardcodedText">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        app:cardCornerRadius="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="#03FFA8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">


                    <TextView
                        android:id="@+id/empty_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:textColor="#000000" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:src="@drawable/green_tick" />



                    <TextView
                        android:id="@+id/DateCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:textColor="#000000" />


                    <TextView
                        android:id="@+id/TimeCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center"

                        android:textColor="#000000" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp"
                android:id="@+id/lin_lay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingEnd="15dp"
                        android:text="Systolic"
                        android:textColor="#000000"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/systolicCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#000000" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingEnd="15dp"
                        android:text="Diastolic"
                        android:textColor="#000000"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/diastolicCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:textColor="#000000" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingEnd="15dp"
                        android:text="Heart beat"
                        android:textColor="#000000"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/heartCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:textColor="#000000" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empty_comment_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"

                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/CommentMyRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"

                    android:textColor="#000000" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>