<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Systolic Pressure (in mm Hg)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6A6A6A"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SystolicPressureEdit"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:hint="Systolic Pressure (in mm Hg)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6A6A6A" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Diastolic Pressure (in mm Hg)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6A6A6A"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DiastolicPressureEdit"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Diastolic Pressure (in mm Hg)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6A6A6A"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Heart Rate (Beats per minute)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6A6A6A"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/HeartRateEdit"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Heart Rate (Beats per minute)"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6A6A6A"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Comment"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="center"
            android:textColorHint="#6A6A6A"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CommentEdit"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Comment"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6A6A6A"
            android:textAlignment="center"
            />
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/SaveEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#005EFF"
            android:gravity="center"
            android:text="Save" />
        <Button
            android:id="@+id/DeleteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#FF0027"
            android:gravity="center"
            android:text="Delete" />


    </LinearLayout>



</LinearLayout>