<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_all"
        android:title="@string/deleteall"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/AboutUs"
        android:title="@string/deleteall"
        android:icon="@drawable/aboutus"
        app:showAsAction="always" />

</menu>